# fritz

./: Cargo.toml  LICENSE  README.md  config.toml.defaults  devbox.json  devenv.nix  devenv.yaml
src/: README.md  app_config.rs  cache.rs  config.rs  main.rs  nix_config.rs  search.rs
