[package]
name = "hm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
figment = { version = "0.10.15", features = ["env", "toml"] }
itertools = "0.12.1"
nix-editor = "0.3.0"
rnix = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
