[package]
name = "fritz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.18"
colored = "2.1.0"
duration-string = { version = "0.3.0", features = ["serde"] }
env_logger = "0.11.3"
figment = { version = "0.10.15", features = ["env", "toml"] }
indicatif = "0.17.8"
itertools = "0.12.1"
log = "0.4.21"
nix-editor = "0.3.0"
regex = "1.10.4"
rnix = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
